# fungo

./: LICENSE  README.md  fungo.install  fungo.opam
docs/: index.html
docs/fungo/: index.html
docs/fungo/Fungo/: index.html
docs/fungo/Fungo/Infix/: index.html
lib/: dune  fungo.ml  fungo.mli
